--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <div class="task">
-    <h1 data-testid="slackUserName">Kharey</h1>
+    <h1  data-testid="slackUserName">Slack Name: Kharey</h1>
     <img src="image.jpg" alt="Kharey" data-testid="slackDisplayImage">
     <p>I am excited to begin my journey</p>
     <h6 data-testid="currentDayOfTheWeek" id="dayOfWeek"></h6>
     <h6 data-testid="currentUTCTime" id="utcTime"></h6>
-    <p data-testid="myTrack">Frontend</p>
+    <p data-testid=“githubURL”>Track: Frontend</p>
     <div id="a"></div>
-    <a href="#" data-testid="githubURL">Github Repository</a>
+    <a href="https://github.com/Nosa10/hngx1" data-testid="githubURL">Github Repository</a>
     </div>
     <script src="index.js"></script>
 </body>
