--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     <p>I am excited to begin my journey</p>
     <h6 data-testid="currentDayOfTheWeek" id="dayOfWeek"></h6>
     <h6 data-testid="currentUTCTime" id="utcTime"></h6>
-    <p data-testid=“githubURL”>Track: Frontend</p>
-    <div id="a"></div>
-    <a href="https://github.com/Nosa10/hngx1" data-testid="githubURL">Github Repository</a>
+    <p data-testid=“myTrack”>Track: Frontend</p>
+    <button><a href="https://github.com/Nosa10/hngx1" data-testid="githubURL">Github Repository</a></button>
     </div>
     <script src="index.js"></script>
 </body>
