Another change again

--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
     
 </head>
 <body>
-    <div class="task">
-    <h1  data-testid="slackUserName">Slack Name: Kharey</h1>
+    <div >
+    <h1  data-testid="slackUserName"> Kharey</h1>
     <img src="image.jpg" alt="Kharey" data-testid="slackDisplayImage">
-    <p>I am excited to begin my journey</p>
     <h6 data-testid="currentDayOfTheWeek" id="dayOfWeek"></h6>
     <h6 data-testid="currentUTCTime" id="utcTime"></h6>
-    <p data-testid=“myTrack”>Track: Frontend</p>
+    <p data-testid=“myTrack”>Frontend</p>
     <button><a href="https://github.com/Nosa10/hngx1" data-testid="githubURL">Github Repository</a></button>
     </div>
     <script src="index.js"></script>
