--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <img src="image.jpg" alt="Kharey" data-testid="slackDisplayImage">
     <h6 data-testid="currentDayOfTheWeek" id="dayOfWeek"></h6>
     <h6 data-testid="currentUTCTime" id="utcTime"></h6>
-    <p data-testid=“myTrack”>Frontend</p>
-    <button><a href="https://github.com/Nosa10/hngx1" data-testid="githubURL">Github Repository</a></button>
+    <p data-testid="myTrack">Frontend</p>
+    <button><a href="https://github.com/Nosa10/hngx1" data-testid=“githubURL”>Github Repository</a></button>
     </div>
     <script src="index.js"></script>
 </body>
